Stop train to teach text growing too big
Because this is absolutely positioned it obscures the text beneath at
some widths.

Making the text smaller (probably) prevents this from happening, but
depending on user settings/font sizes we can't be 100% certain.

--- a/app/webpacker/styles/teaching-events.scss
+++ b/app/webpacker/styles/teaching-events.scss
@@ -1,4 +1,4 @@
-@mixin train-to-teach-event-box {
+@mixin train-to-teach-event-box($small: false) {
   border: 2px solid $pink;
   padding: 2rem 1rem 1rem;
 
@@ -13,6 +13,12 @@
     background-position: .4em;
     font-weight: bold;
     padding: .4em .4em .4em 2em;
+
+    @if $small {
+      @include mq($from: tablet) {
+        @include font-size(small);
+      }
+    }
   }
 }
 
@@ -510,7 +516,7 @@
 
       .about-ttt-event {
         position: relative;
-        @include train-to-teach-event-box;
+        @include train-to-teach-event-box($small: true);
 
         flex-basis: 40%;
       }
